# RxMemberSim

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: README.md  interactive_demo.py
demos/pharmacy-benefits/: README.md
docs/: README.md
docs/reference/: api.md  ncpdp-formats.md
docs/tutorials/: first-claim.md
docs/user-guide/: dur-screening.md  formulary.md  getting-started.md  pharmacy-claims.md  prior-auth.md
examples/: README.md  basic_claim.py
examples/conversations/: 01-getting-started.md  02-formulary-testing.md  03-dur-scenarios.md  04-prior-auth-workflow.md  05-specialty-pharmacy.md
examples/developer/: README.md
skills/: dur-rules.md  epa.md  formulary.md  ncpdp-transactions.md  pharmacy-domain.md  pricing.md  prior-auth.md  specialty-pharmacy.md
src/rxmembersim/: __init__.py
src/rxmembersim/authorization/: criteria.py  prior_auth.py  question_sets.py
src/rxmembersim/claims/: adjudication.py  claim.py  response.py
src/rxmembersim/core/: drug.py  member.py  pharmacy.py  prescriber.py  prescription.py
src/rxmembersim/dur/: __init__.py  alerts.py  rules.py  validator.py
src/rxmembersim/formulary/: __init__.py  formulary.py  quantity_limit.py  step_therapy.py
src/rxmembersim/mcp/: server.py
src/rxmembersim/pricing/: copay_assist.py  rebate.py  spread.py
src/rxmembersim/scenarios/: engine.py  events.py
src/rxmembersim/specialty/: hub.py
src/rxmembersim/validation/: framework.py
tests/: test_core_models.py  test_epa.py  test_validation.py
(+2 files in other folders)
