[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rxmembersim"
version = "1.0.0"
description = "Synthetic pharmacy benefit data generation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Mark Oswald"}
]
dependencies = [
    "healthsim-core @ git+https://github.com/mark64oswald/healthsim-core.git",
    "pydantic>=2.0.0",
    "faker>=18.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
mcp = [
    "mcp>=0.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rxmembersim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# ePA (electronic Prior Authorization) uses industry-standard lowercase 'e' prefix
"src/rxmembersim/formats/ncpdp/epa.py" = ["N801"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true